--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Jinja2==3.1.6
 MarkupSafe==3.0.2
 playwright==1.53.0
 pyee==13.0.0
+python-dotenv==1.1.1
 SQLAlchemy==2.0.41
 typing_extensions==4.14.1
 Werkzeug==3.1.3
